Refactor controllers and session management
- Added session management to AbstractController and its derived controllers.
- Improved documentation across controllers, including detailed descriptions of methods and properties.
- Enhanced error handling with ErrorHandler and ErrorPresenter for better user feedback.
- Updated validation logic in Validator class for improved clarity and functionality.
- Refined rendering logic in Renderer class to ensure better error handling and view rendering.
- Adjusted views to align with new error handling and validation structures.
- Introduced NullErrorPresenter for testing purposes to suppress error output.
- Updated User model to include logging capabilities for better error tracking.

--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,12 @@
     "autoload": {
         "psr-4": {
             "GenshinTeam\\": "src/",
-            "GenshinTeam\\Controllers\\": "src/Controllers/",
             "GenshinTeam\\Connexion\\": "src/Connexion/",
+            "GenshinTeam\\Controllers\\": "src/Controllers/",
             "GenshinTeam\\Models\\": "src/Models/",
-            "Genshinteam\\Renderer\\": "src/Renderer/",
+            "GenshinTeam\\Renderer\\": "src/Renderer/",
             "GenshinTeam\\Router\\": "src/Router/",
+            "GenshinTeam\\Session\\": "src/Session/",
             "GenshinTeam\\Utils\\": "src/Utils/",
             "GenshinTeam\\Validation\\": "src/Validation/"
         }
