Feat: Ajout de la première partie du module de reset de mot passe
 - Ajout de la vue forgot-password (formulaire de demande de reset de mot de passe) et du contrôleur associé.

- Ajout du modèle PasswordReset pour la réinitialisation du mot de passe

- Ajout d'une animation sur le champs qui a le focus dans les formulaires

- Ajout d'une validation côté front pour les formulaires d'inscription et de connexion

- Utilisation de PHPMailer pour la réinitialisation du mot de passe couplé avec Papercut SMTP

- Modification du DockerFile ainsi que du .htaccess afin d'activer la mise en cache et la compression GZip afin d'améliorer les performances

- Modification du router.php afin de rendre l'ajout de route plus lisible

- Ajout du fichier robots.txt

- Ajout de 2 Traits: ExceptionHanlerTrait qui gère les exception et HandleFormValidation qui gère les erreurs de validation

-  Création de classes héritées de TestCase afin de créer un environnement de test correctement isolé

- Réécriture de certains tests car créaient des effets de bord + ajout de nouveau pour couvrir les nouvelles classes et nouveaux modèles.

- Modification du template default afin de pouvoir y incorporer des métadonnée ou des fichiers de style.

--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,25 @@
 RewriteEngine On
-RewriteRule ^public/assets/ - [L]
+# Ne pas router les fichiers existants (dont robots.txt)
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule ^ - [L]
 RewriteRule ^(.*)$ router.php [L,QSA]
+
+<IfModule mod_expires.c>
+  ExpiresActive On
+
+  # Polices
+  ExpiresByType font/ttf "access plus 1 year"
+
+  # Autres fichiers statiques
+  ExpiresByType image/webp "access plus 1 year"
+  ExpiresByType image/png "access plus 1 year"
+  ExpiresByType text/css "access plus 1 year"
+  ExpiresByType text/javascript "access plus 1 year"
+
+</IfModule>
+
+<IfModule mod_deflate.c>
+  AddOutputFilterByType DEFLATE text/html text/plain text/xml
+  AddOutputFilterByType DEFLATE text/css text/javascript application/javascript application/json
+  AddOutputFilterByType DEFLATE font/ttf
+</IfModule>
