--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,16 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "GenshinTeam\\": "src/",
             "GenshinTeam\\Connexion\\": "src/Connexion/",
             "GenshinTeam\\Controllers\\": "src/Controllers/",
             "GenshinTeam\\Models\\": "src/Models/",
             "GenshinTeam\\Renderer\\": "src/Renderer/",
             "GenshinTeam\\Router\\": "src/Router/",
             "GenshinTeam\\Session\\": "src/Session/",
+            "GenshinTeam\\Traits\\": "src/Traits/",
             "GenshinTeam\\Utils\\": "src/Utils/",
-            "GenshinTeam\\Validation\\": "src/Validation/"
+            "GenshinTeam\\Validation\\": "src/Validation/",
+            "Tests\\TestCase\\": "Tests/TestCase/"
         }
     },
     "require-dev": {
@@ -21,6 +22,7 @@
     },
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "monolog/monolog": "^3.9"
+        "monolog/monolog": "^3.9",
+        "phpmailer/phpmailer": "^6.10"
     }
 }
