--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "psr-4": {
             "GenshinTeam\\Connexion\\": "src/Connexion/",
             "GenshinTeam\\Controllers\\": "src/Controllers/",
+            "GenshinTeam\\Entities\\": "src/Entities/",
             "GenshinTeam\\Models\\": "src/Models/",
             "GenshinTeam\\Renderer\\": "src/Renderer/",
             "GenshinTeam\\Router\\": "src/Router/",
